Disables EnableAccelerationToAvoidReadbacks due to regression

BUG=702492

Review-Url: https://codereview.chromium.org/2767753002
Cr-Commit-Position: refs/heads/master@{#458623}

Former-commit-id: ea6a16123f90b39e8de13c65cf04935107d252ae